finished controllers for mqtt and frontend stuff for now
